fix(unity-bootstrap-theme): fix styles: content header alignment, mobile menu gray line adjustment

--- a/packages/unity-bootstrap-theme/src/scss/extends/_global-header.scss
+++ b/packages/unity-bootstrap-theme/src/scss/extends/_global-header.scss
@@ -11,7 +11,7 @@
 8. Page Content
 --------------------------------------------------------------*/
 
-$fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
+$fa-search: url($image-assets-path + "/font-awesome-svg/search.svg");
 
 @mixin transition {
   transition: 0.5s cubic-bezier(0.19, 1, 0.19, 1);
@@ -19,7 +19,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
 
 @mixin gold-underline {
   @include transition;
-  content: '';
+  content: "";
   display: block;
   height: $uds-size-spacing-1;
   /* Use linear gradient so we can offset and avoid little gold slivers */
@@ -137,12 +137,12 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
     }
 
     > a.signout:before {
-      content: '(';
+      content: "(";
       margin-left: 4px;
     }
 
     > a.signout:after {
-      content: ') ';
+      content: ") ";
     }
   }
 
@@ -161,8 +161,8 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
     color: $uds-color-base-gray-5;
   }
 
-  input[type='search'] {
-    background: url($image-assets-path + '/font-awesome-svg/search-gray-6.svg')
+  input[type="search"] {
+    background: url($image-assets-path + "/font-awesome-svg/search-gray-6.svg")
       no-repeat 10px 50%;
     background-size: 12px;
     width: 32px;
@@ -181,8 +181,8 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
     }
   }
 
-  input[type='search']:focus {
-    background-image: url($image-assets-path + '/font-awesome-svg/search-gray-5.svg');
+  input[type="search"]:focus {
+    background-image: url($image-assets-path + "/font-awesome-svg/search-gray-5.svg");
     width: 200px;
     color: $uds-color-base-gray-5;
     background-color: #fff;
@@ -297,13 +297,18 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
   background-color: $uds-color-base-white;
 
   .container,
-  .container-fluid,
+  // .container-fluid,
   .container-xl,
   .container-lg,
   .container-md,
   .container-sm {
     padding-left: 12px;
     padding-right: 12px;
+  }
+
+  .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
   }
 }
 
@@ -507,7 +512,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
       right: 0;
       width: 100%;
       &:before {
-        content: '';
+        content: "";
         width: 100%;
         height: 50px;
         position: absolute;
@@ -531,7 +536,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
 
       input {
         width: 100%;
-        background: url($image-assets-path + '/font-awesome-svg/search-gray-6.svg')
+        background: url($image-assets-path + "/font-awesome-svg/search-gray-6.svg")
           no-repeat 10px 50%;
         background-size: 16px;
         background-color: $uds-color-base-white;
@@ -580,19 +585,19 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
         }
 
         > a.signout:before {
-          content: '(';
+          content: "(";
           margin-left: 4px;
         }
 
         > a.signout:after {
-          content: ') ';
+          content: ") ";
         }
       }
     }
 
     &.shadow:before {
       @include transition;
-      content: '';
+      content: "";
       height: $uds-size-spacing-7;
       width: 100%;
       background: transparent
@@ -654,12 +659,12 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
       margin: $uds-size-spacing-1 0;
     }
 
-    div[class^='col-'] {
+    div[class^="col-"] {
       margin-bottom: $uds-size-spacing-6;
       padding: 0 $uds-size-spacing-4;
     }
 
-    div[class^='col-']:last-child {
+    div[class^="col-"]:last-child {
       margin-bottom: 0;
     }
 
@@ -853,7 +858,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
     }
 
     .no-links {
-      margin-top: $uds-size-spacing-5;
+      // margin-top: $uds-size-spacing-5;
       flex-direction: row;
       align-items: center;
       .title.subdomain-name {
@@ -958,7 +963,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
 
       .nav-link.show::after {
         @include gold-underline-expand-desktop;
-        margin-left: -.75rem; // parent element has left padding of .75rem
+        margin-left: -0.75rem; // parent element has left padding of .75rem
         width: calc(100% + 1.5rem);
       }
 
@@ -984,7 +989,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
       border: 1px solid $uds-color-base-gray-3;
       padding: $uds-size-spacing-4;
 
-      div[class^='col-'] {
+      div[class^="col-"] {
         margin-bottom: 0;
       }
 
@@ -1054,7 +1059,7 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
         padding: $uds-size-spacing-2 0;
 
         &:before {
-          content: '';
+          content: "";
           height: 1px;
           width: 100vw;
           margin-left: calc(-50vw + 50%);
@@ -1064,12 +1069,12 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
           top: -1rem;
         }
 
-        div[class^='col-'] {
+        div[class^="col-"] {
           padding-bottom: 0;
         }
       }
 
-      div[class^='col-'] {
+      div[class^="col-"] {
         border-right: 1px solid $uds-color-base-gray-4;
         padding: 0 $uds-size-spacing-3 $uds-size-spacing-5 $uds-size-spacing-3;
         position: relative;
